--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,80 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<div fxLayout="column" fxLayoutGap="20px">
+
+
+	<div class="example-container mat-elevation-z8">
+		<div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+			<mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+			<div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+				GitHub's API rate limit has been reached. It will be reset in one minute.
+			</div>
+		</div>
+
+		<div class="example-filter-container mat-typography">
+			<ng-material2-facet-search [source]="facets" [chipLabelsEnabled]="chipLabelsEnabled" [confirmOnRemove]="this.confirmOnRemove"
+			 [clearButtonEnabled]="clearButtonEnabled" placeholder="Filter Table..." clearButtonText="Clear">
+			</ng-material2-facet-search>
+		</div>
+
+		<div class="example-table-container">
+
+			<table mat-table [dataSource]="data" class="example-table" matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+				<!-- Number Column -->
+				<ng-container matColumnDef="number">
+					<th mat-header-cell *matHeaderCellDef>Number</th>
+					<td mat-cell *matCellDef="let row"><a href="{{row.html_url}}" target="_blank">{{row.number}}</a>
+					</td>
+				</ng-container>
+
+				<!-- Title Column -->
+				<ng-container matColumnDef="title">
+					<th mat-header-cell *matHeaderCellDef>Title</th>
+					<td mat-cell *matCellDef="let row">{{row.title}}</td>
+				</ng-container>
+
+				<!-- State Column -->
+				<ng-container matColumnDef="state">
+					<th mat-header-cell *matHeaderCellDef>State</th>
+					<td mat-cell *matCellDef="let row">{{row.state}}</td>
+				</ng-container>
+
+				<!-- Created Column -->
+				<ng-container matColumnDef="created_at">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+						Created
+					</th>
+					<td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+				</ng-container>
+				<!-- Updated Column -->
+				<ng-container matColumnDef="updated_at">
+					<th mat-header-cell *matHeaderCellDef>
+						Updated
+					</th>
+					<td mat-cell *matCellDef="let row">{{row.updated_at | date}}</td>
+				</ng-container>
+
+				<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+				<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+			</table>
+		</div>
+
+		<mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
+	</div>
+
+	<mat-divider></mat-divider>
+
+	<mat-card fxLayout="column">
+		<mat-card-title>
+			Settings
+		</mat-card-title>
+		<mat-checkbox [(ngModel)]="chipLabelsEnabled">
+			Chip labels
+		</mat-checkbox>
+		<mat-checkbox [(ngModel)]="clearButtonEnabled">
+			"Clear" Button
+		</mat-checkbox>
+		<mat-checkbox [(ngModel)]="confirmOnRemove">
+			Confirmation on remove
+		</mat-checkbox>
+	</mat-card>
+
+</div>
