--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 
 		<div class="example-filter-container mat-typography">
 			<ng-material2-facet-search [source]="facets" [chipLabelsEnabled]="chipLabelsEnabled" [confirmOnRemove]="this.confirmOnRemove"
-			 [clearButtonEnabled]="clearButtonEnabled" placeholder="Filter Table..." clearButtonText="Clear">
+			 [clearButtonEnabled]="clearButtonEnabled" placeholder="Add a filter..." clearButtonText="CLEAR FILTERS">
 			</ng-material2-facet-search>
 		</div>
 
